# ZeroOS

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bootstrap  build-backtrace.sh  build-fibonacci.sh  build-std-smoke.sh  build-stdio.sh  build-stdlib.sh  build-syscall-cycles.sh  matrix.yaml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.ghk/: pre-commit
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/cargo-matrix/: CHANGELOG.md  Cargo.toml
crates/cargo-matrix/src/: lib.rs  main.rs  matrix.rs
crates/elf-report/: Cargo.toml
crates/elf-report/src/: analyze.rs  lib.rs  main.rs  map.rs  render.rs  symbol.rs  types.rs
crates/zeroos/: Cargo.toml
crates/zeroos-allocator-buddy/: Cargo.toml
crates/zeroos-allocator-buddy/src/: allocator.rs  lib.rs
crates/zeroos-allocator-bump/: Cargo.toml
crates/zeroos-allocator-bump/src/: allocator.rs  lib.rs
crates/zeroos-allocator-linked-list/: Cargo.toml
crates/zeroos-allocator-linked-list/src/: allocator.rs  lib.rs
crates/zeroos-arch-riscv/: Cargo.toml  build.rs
crates/zeroos-arch-riscv/src/: boot.rs  handler.rs  lib.rs  ops.rs  ret_from_fork.rs  switch_to.rs  thread_ctx.rs  trap.rs
crates/zeroos-backtrace/: Cargo.toml  build.rs
crates/zeroos-backtrace/src/: dwarf.rs  frame_pointer.rs  lib.rs  noop.rs
crates/zeroos-build/: Cargo.toml  linker.ld
crates/zeroos-build/src/: lib.rs  linker.rs  main.rs  project.rs
crates/zeroos-build/src/cmds/: build.rs  linker.rs  mod.rs  target.rs
crates/zeroos-build/src/files/: generic-linux.json.template  linker.ld.template  musl-toolchain.sh
crates/zeroos-build/src/spec/: arch.rs  llvm.rs  mod.rs  profiles.rs  target.rs  utils.rs
crates/zeroos-build/src/toolchain/: discovery.rs  install.rs  mod.rs
crates/zeroos-debug/: Cargo.toml
crates/zeroos-debug/src/: lib.rs
crates/zeroos-device-console/: Cargo.toml
crates/zeroos-device-console/src/: lib.rs
crates/zeroos-device-null/: Cargo.toml
crates/zeroos-device-null/src/: lib.rs
crates/zeroos-device-urandom/: Cargo.toml
crates/zeroos-device-urandom/src/: lib.rs
crates/zeroos-device-zero/: Cargo.toml
crates/zeroos-device-zero/src/: lib.rs
crates/zeroos-foundation/: Cargo.toml
crates/zeroos-foundation/src/: arch.rs  entry.rs  kernel.rs  lib.rs  syscall.rs
crates/zeroos-foundation/src/handlers/: info.rs  memory.rs  mod.rs  random.rs  thread.rs  vfs.rs
crates/zeroos-foundation/src/kfn/: arch.rs  memory.rs  mod.rs  random.rs  scheduler.rs  thread.rs  trap.rs  vfs.rs
crates/zeroos-foundation/src/ops/: arch.rs  memory.rs  mod.rs  random.rs  scheduler.rs  trap.rs  vfs.rs
crates/zeroos-foundation/src/utils/: global.rs  mod.rs  random.rs  stack.rs
crates/zeroos-libunwind/: Cargo.toml
crates/zeroos-libunwind/src/: lib.rs
crates/zeroos-macros/: Cargo.toml
crates/zeroos-macros/src/: asm_block.rs  cfgs.rs  features.rs  lib.rs
crates/zeroos-os-linux/: Cargo.toml
crates/zeroos-os-linux/src/: arch.rs  lib.rs  syscall.rs
crates/zeroos-os-linux/src/handlers/: mod.rs  signal.rs  thread.rs
crates/zeroos-rng/: Cargo.toml
crates/zeroos-rng/src/: chacha.rs  lcg.rs  lib.rs  tests.rs
crates/zeroos-runtime-gnu/: Cargo.toml
crates/zeroos-runtime-gnu/src/: lib.rs  stack_builder.rs
crates/zeroos-runtime-gnu/src/riscv64/: bootstrap.rs  mod.rs
crates/zeroos-runtime-musl/: Cargo.toml  build.rs
crates/zeroos-runtime-musl/src/: eh_frame_register.rs  lib.rs  lock_override.rs  stack.rs
crates/zeroos-runtime-musl/src/riscv64/: bootstrap.rs
crates/zeroos-runtime-nostd/: Cargo.toml
crates/zeroos-runtime-nostd/src/: alloc.rs  backtrace.rs  io.rs  lib.rs  panic.rs  riscv64.rs
crates/zeroos-scheduler-cooperative/: Cargo.toml
crates/zeroos-scheduler-cooperative/src/: lib.rs  ops.rs  scheduler.rs  thread.rs
crates/zeroos-vfs/: Cargo.toml
crates/zeroos-vfs-core/src/: lib.rs  vfs.rs
crates/zeroos-vfs/src/: lib.rs  vfs.rs
crates/zeroos/src/: lib.rs
docs/: zkvm-integration.md
docs/troubleshooting/: README.md  llvm-machine-outliner.md
examples/backtrace/: Cargo.toml
examples/backtrace/src/: main.rs
examples/c-smoke/c/: Makefile
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: lib.rs  main.rs
examples/rayon/: Cargo.toml
examples/rayon/src/: main.rs
examples/std-smoke/: Cargo.toml
examples/stdio/c/: Makefile
examples/stdio/c/src/: main.c
examples/stdio/rust/: Cargo.toml
examples/stdio/rust/src/: lib.rs
examples/stdlib/: Cargo.toml
examples/stdlib/src/: main.rs
examples/syscall-cycles/: Cargo.toml
examples/syscall-cycles/src/: main.rs
scripts/: git-smart-prune
xtask/: Cargo.toml
xtask/src/: main.rs  sh.rs  spike_syscall_instcount.rs
xtask/src/cmds/: act.rs  analyze_backtrace.rs  massage.rs  mod.rs
