[workspace]
members = [
  "xtask",
  "crates/zeroos",
  "crates/zeroos-foundation",
  "crates/zeroos-debug",
  "crates/zeroos-macros",
  "crates/zeroos-arch-riscv",
  "crates/zeroos-os-linux",
  "crates/zeroos-runtime-musl",
  "crates/zeroos-runtime-gnu",
  "crates/zeroos-runtime-nostd",
  "crates/zeroos-libunwind",
  "crates/zeroos-build",
  "crates/zeroos-allocator-bump",
  "crates/zeroos-allocator-linked-list",
  "crates/zeroos-allocator-buddy",
  "crates/zeroos-vfs",
  "crates/zeroos-device-console",
  "crates/zeroos-device-null",
  "crates/zeroos-device-zero",
  "crates/zeroos-device-urandom",
  "crates/zeroos-rng",
  "platforms/platform",
  "platforms/spike-platform",
  "platforms/spike-build",
  "examples/fibonacci",
  "examples/stdlib",
  "examples/rayon",
  "examples/stdio/rust",
]
resolver = "2"

[workspace.dependencies]
# Internal workspace crates
zeroos = { path = "crates/zeroos" }
foundation = { path = "crates/zeroos-foundation", package = "zeroos-foundation", default-features = false }
debug = { path = "crates/zeroos-debug", package = "zeroos-debug" }
zeroos-macros = { path = "crates/zeroos-macros" }
arch-riscv = { path = "crates/zeroos-arch-riscv", package = "zeroos-arch-riscv" }
os-linux = { path = "crates/zeroos-os-linux", package = "zeroos-os-linux" }
runtime-musl = { path = "crates/zeroos-runtime-musl", package = "zeroos-runtime-musl" }
runtime-gnu = { path = "crates/zeroos-runtime-gnu", package = "zeroos-runtime-gnu" }
runtime-nostd = { path = "crates/zeroos-runtime-nostd", package = "zeroos-runtime-nostd" }
libunwind = { path = "crates/zeroos-libunwind", package = "zeroos-libunwind" }
build = { path = "crates/zeroos-build", package = "zeroos-build" }
allocator-bump = { path = "crates/zeroos-allocator-bump", package = "zeroos-allocator-bump" }
allocator-linked-list = { path = "crates/zeroos-allocator-linked-list", package = "zeroos-allocator-linked-list" }
allocator-buddy = { path = "crates/zeroos-allocator-buddy", package = "zeroos-allocator-buddy" }
vfs = { path = "crates/zeroos-vfs", package = "zeroos-vfs" }
device-console = { path = "crates/zeroos-device-console", package = "zeroos-device-console" }
device-null = { path = "crates/zeroos-device-null", package = "zeroos-device-null" }
device-zero = { path = "crates/zeroos-device-zero", package = "zeroos-device-zero" }
device-urandom = { path = "crates/zeroos-device-urandom", package = "zeroos-device-urandom" }
rng = { path = "crates/zeroos-rng", package = "zeroos-rng", default-features = false }

# External dependencies
spin = { version = "0.9", default-features = false }
spike-platform = { path = "platforms/spike-platform" }
spike-build = { path = "platforms/spike-build" }
platform = { path = "platforms/platform" }
htif = { path = "third-party/htif" }

# External dependencies - Common
cfg-if = "1.0"
libc = "0.2"
linked_list_allocator = "0.10"
memoffset = "0.9"
const_format = "0.2"

# RISC-V
riscv = { version = "0.11", default-features = false }

# CLI and build tools
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
parse-size = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
env_logger = "0.11"

# Utilities
dirs = "5.0"
tempfile = "3.10"
paste = "1.0"

# Parallelism
rayon = "1.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
