[package]
name = "elf-report"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Portable ELF inspection tool (sections + symbol size summaries)"

[dependencies]
anyhow.workspace = true
clap.workspace = true
object.workspace = true
rustc-demangle.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
