[package]
name = "zeroos-arch-riscv"
version = "0.1.0"
edition = "2021"
description = "RISC-V architecture support for ZeroOS (riscv32 and riscv64)"

[lib]
name = "zeroos_arch_riscv"
path = "src/lib.rs"

[dependencies]
riscv.workspace = true
cfg-if.workspace = true
foundation = { workspace = true, default-features = false }
debug.workspace = true
memoffset.workspace = true
zeroos-macros.workspace = true
paste.workspace = true

[features]
default = []

debug = ["debug/debug"]
std = []
