[package]
name = "zeroos-arch-riscv"
version.workspace = true
edition.workspace = true
description = "RISC-V architecture support for ZeroOS (riscv32 and riscv64)"

[lib]
name = "zeroos_arch_riscv"
path = "src/lib.rs"

[dependencies]
riscv.workspace = true
cfg-if.workspace = true
foundation = { workspace = true, features = ["arch"] }
debug.workspace = true
memoffset.workspace = true
zeroos-macros.workspace = true
paste.workspace = true

[features]
default = []

debug = ["debug/debug"]
std = []
