[package]
name = "zeroos-os-linux"
version = "0.1.0"
edition = "2021"
description = "Linux syscall number mappings for ZeroOS"

[lib]
name = "zeroos_os_linux"
path = "src/lib.rs"

[dependencies]
foundation = { workspace = true, default-features = false }
cfg-if.workspace = true
libc.workspace = true
arch-riscv = { workspace = true }

[features]
default = ["trap"]
trap = ["foundation/trap"]
memory = ["foundation/memory"]
scheduler = ["foundation/scheduler"]
vfs = ["foundation/vfs"]
random = ["foundation/random"]
