[package]
name = "zeroos-runtime-nostd"
version.workspace = true
edition.workspace = true
description = "No-std runtime bootstrap for ZeroOS"

[lib]
crate-type = ["rlib"]

[features]
default = []
panic = []
backtrace = []
memory = ["foundation/memory"]

[dependencies]
foundation = { workspace = true }
cfg-if = { workspace = true }
