[package]
name = "zeroos-scheduler-cooperative"
version.workspace = true
edition.workspace = true
description = "Cooperative scheduler implementation for ZeroOS"

[lib]
name = "zeroos_scheduler_cooperative"
path = "src/lib.rs"

[dependencies]
foundation = { workspace = true, features = ["scheduler", "memory", "arch"] }
zeroos-macros = { workspace = true }
cfg-if.workspace = true
libc.workspace = true

[features]
default = []
riscv = []
