[package]
name = "rayon-example"
version = "0.1.0"
edition = "2021"

[dependencies]
platform.workspace = true
zeroos.workspace = true
debug.workspace = true
cfg-if.workspace = true
rayon.workspace = true
libc.workspace = true

[features]
default = ["with-spike", "memory"]

with-spike = ["platform/with-spike"]
std = ["with-spike", "platform/std", "platform/vfs", "platform/memory"]
debug = ["platform/debug"]
memory = ["platform/memory"]
vfs = ["platform/vfs"]
bounds-checks = ["platform/bounds-checks"]
thread = ["platform/thread"]

[[bin]]
name = "rayon-example"
path = "src/main.rs"
