[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
platform.workspace = true
cfg-if.workspace = true

[features]
default = ["platform/with-spike"]

# Platform selection (choose one)
with-spike = ["platform/with-spike"]

# Std support (orthogonal to platform)
std = ["platform/std"]
