[package]
name = "stdio-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
foundation = { workspace = true, features = ["std", "libc-main"] }
spike-platform = { workspace = true, features = ["std"] }

# Enable link-time optimization to reduce binary size,
# but be careful with symbol stripping.
[profile.release]
lto = true
panic = "abort"
